Added first simple JAX-RS approach to get trips